space between divs fixed, margins edited on mobile first

--- a/css/base.css
+++ b/css/base.css
@@ -65,6 +65,10 @@ h2 {
     display: none;
   }
 
+  .social-icons {
+    margin-bottom: 75px;
+  }
+
   .social-icons a {
     font-size: 1.5em;
   }
