--- a/css/modules.css
+++ b/css/modules.css
@@ -4,6 +4,10 @@
   text-align: center;
 }
 
+.social-icons {
+  padding-bottom:50px;
+}
+
 .social-icons li {
   display: inline-block;
   color: #efefef;
@@ -33,7 +37,7 @@
 }
 
 .skills-content h1 {
-  margin-top: 50px;
+  /*margin-top: 50px;*/
   font-size: 35px;
 }
 
@@ -43,7 +47,7 @@
 }
 
 .contact-content h1{
-  margin-top: 50px;
+  /*margin-top: 50px;*/
   font-size: 35px;
 }
 
